--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -23,7 +23,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-    <title>ADL VW Sandbox</title>
+    <title>Active Citizen 3D</title>
 
     <!-- The Virtual World Framework makes use of the jQuery library.                            -->
 
