Added support for IRC client layout

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -71,8 +71,19 @@
 
     <!-- The main content renders to "#vwf-root", the item with the id "vwf-root".               -->
 
-    <div id="vwf-root"></div>
-  
+    <div>
+      <div id="vwf-root"></div>
+      <div id="irc-root" style="display:none;">
+        <div>
+          <iframe src="//www.youtube.com/embed/0mFk1VfHPt0" frameborder="0" allowfullscreen style='border:0;position:absolute;bottom:0px;left:0px;width:318px;height:270px;'></iframe>
+        </div>
+        <div>
+          <a href="https://www.betrireykjavik.is/">Ný Hugmynd</a>
+        </div>
+        <div id="irc-placeholder"></div>
+      </div>
+    </div>
+
     <!-- Overlay div to display loading information> -->
     
   </body>
