--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -72,10 +72,29 @@
     <!-- The main content renders to "#vwf-root", the item with the id "vwf-root".               -->
 
     <div>
+      <div id="header-root" style="width:100%;padding-left:15px;position:absolute;top:0px;left:0px;display:none;">
+        <div id="header-br-link" style="width:30%;float:left;">
+          <a href="/contact/allWorlds/0"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo.png" heigh="75"/></a>
+        </div>
+        <div id="header-movement" style="width:25%;float:left;">
+          <img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_eye.png" heigh="75"/>
+          <img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_question.png" heigh="75"/>
+          <img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_world.png" heigh="75"/>
+        </div>
+        <div id="header-new-idea" style="width:20%;padding-bottom:20px;padding-top:20px;float:left;">
+          <a href="https://betri-hverfi-laugardalur-2015.betrireykjavik.is/ideas/new"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
+        </div>
+        <div id="header-sm" style="width:15%;padding-bottom:20px;padding-top:10px;float:left;color:#326ba8;">
+          <h1>Laugardalur 2015</h1>
+        </div>
+        <div id="header-sm" style="width:10%;padding-bottom:20px;padding-top:10px;float:right;color:#000;">
+          Facebook Like
+        </div>
+      </div>
       <div id="vwf-root"></div>
       <div id="irc-root" style="display:none;">
         <div>
-          <iframe src="//www.youtube.com/embed/0mFk1VfHPt0" frameborder="0" allowfullscreen style='border:0;position:absolute;bottom:0px;left:0px;width:318px;height:270px;'></iframe>
+          <iframe src="//www.youtube.com/embed/NUlU_FcMRl4" frameborder="0" allowfullscreen style='border:0;position:absolute;bottom:0px;left:0px;width:318px;height:100%;'></iframe>
         </div>
         <div>
           <a href="https://www.betrireykjavik.is/">Ný Hugmynd</a>
