--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -82,7 +82,7 @@
           <img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_world.png" heigh="75"/>
         </div>
         <div id="header-new-idea" style="width:20%;padding-bottom:20px;padding-top:20px;float:left;">
-          <a href="https://betri-hverfi-laugardalur-2015.betrireykjavik.is/ideas/new"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
+          <a target="_blank" href="https://betri-hverfi-laugardalur-2015.betrireykjavik.is/ideas/new"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
         </div>
         <div id="header-sm" style="width:15%;padding-bottom:20px;padding-top:10px;float:left;color:#326ba8;">
           <h1>Laugardalur 2015</h1>
