Autoplay youtube video

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -94,7 +94,7 @@
       <div id="vwf-root"></div>
       <div id="irc-root" style="display:none;">
         <div>
-          <iframe src="//www.youtube.com/embed/NUlU_FcMRl4" frameborder="0" allowfullscreen style='border:0;position:absolute;bottom:0px;left:0px;width:318px;height:100%;'></iframe>
+          <iframe src="//www.youtube.com/embed/NUlU_FcMRl4?rel=0&autoplay=1" frameborder="0" allowfullscreen style='border:0;position:absolute;bottom:0px;left:0px;width:318px;height:100%;'></iframe>
         </div>
         <div>
           <a href="https://www.betrireykjavik.is/">Ný Hugmynd</a>
