Fix layout for irc window and youtube video

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -92,14 +92,11 @@
         </div>
       </div>
       <div id="vwf-root"></div>
-      <div id="irc-root" style="display:none;">
-        <div>
-          <iframe src="//www.youtube.com/embed/NUlU_FcMRl4?rel=0&autoplay=1" frameborder="0" allowfullscreen style='border:0;position:absolute;bottom:0px;left:0px;width:318px;height:100%;'></iframe>
+      <div id="irc-root" style="display:none;width:100%;position:absolute;bottom:0px;">
+        <div style="width:20%;height:100%;float:left;">
+          <iframe src="//www.youtube.com/embed/NUlU_FcMRl4?rel=0&autoplay=1" frameborder="0" allowfullscreen height="100%" width="100%" style='border:0;'></iframe>
         </div>
-        <div>
-          <a href="https://www.betrireykjavik.is/">Ný Hugmynd</a>
-        </div>
-        <div id="irc-placeholder"></div>
+        <div id="irc-placeholder" style="height:100%;width:80%;float:right;"></div>
       </div>
     </div>
 
