--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -77,9 +77,9 @@
           <a href="/contact/allWorlds/0"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo.png" heigh="75"/></a>
         </div>
         <div id="header-movement" style="width:25%;float:left;">
-          <img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_eye.png" heigh="75"/>
-          <img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_question.png" heigh="75"/>
-          <img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_world.png" heigh="75"/>
+          <img style="cursor:pointer" id="set3rdPersonMode" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_eye.png" heigh="75"/>
+          <img id="openHelp" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_question.png" heigh="75"/>
+          <img style="cursor:pointer" id="setOrbitMode" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_world.png" heigh="75"/>
         </div>
         <div id="header-new-idea" style="width:20%;padding-bottom:20px;padding-top:20px;float:left;">
           <a target="_blank" href="https://betri-hverfi-laugardalur-2015.betrireykjavik.is/ideas/new"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
@@ -101,7 +101,6 @@
     </div>
 
     <!-- Overlay div to display loading information> -->
-    
   </body>
 
 </html>
