IRC chat only working

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -89,12 +89,13 @@
         </div>
         <div id="header-sm" style="width:10%;padding-bottom:20px;padding-top:10px;float:right;color:#000;">
           Facebook Like
+          <div id="2dLink"></div>
         </div>
       </div>
       <div id="vwf-root"></div>
       <div id="irc-root" style="display:none;width:100%;position:absolute;bottom:0px;">
         <div style="width:20%;height:100%;float:left;">
-          <iframe src="//www.youtube.com/embed/NUlU_FcMRl4?rel=0&autoplay=1" frameborder="0" allowfullscreen height="100%" width="100%" style='border:0;'></iframe>
+          <iframe src="//www.youtube.com/embed/NUlU_FcMRl4" frameborder="0" allowfullscreen height="100%" width="100%" style='border:0;'></iframe>
         </div>
         <div id="irc-placeholder" style="height:100%;width:80%;float:right;"></div>
       </div>
