Added a home page for netfundur

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -25,7 +25,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name = "viewport" content = "width = device-width,initial-scale = 1.0, user-scalable = no">
-    <title>Active Citizen 3D</title>
+    <title>Your Priorities 3D</title>
 
     <!-- The Virtual World Framework makes use of the jQuery library.                            -->
    
