--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -28,7 +28,7 @@
     <title>Your Priorities 3D</title>
 
     <!-- The Virtual World Framework makes use of the jQuery library.                            -->
-   
+    <script type="text/javascript" src="mobile-detect.min.js"></script>
     <script type="text/javascript" src="polyfills.js"></script>
     <script type="text/javascript" src="require.js"></script>
     <script type="text/javascript" src="/vwfDataManager.svc/getanalytics.js"></script>
@@ -58,8 +58,8 @@
     <link rel="stylesheet" type="text/css" href="vwf/view/editorview/css/jquery-ui-1.10.3.custom.css" />
 
     <script type="text/javascript">
-     //here we go! this fires a bunch of loads, and when they are don, launches the VWF
-	   require(['load']);
+      //here we go! this fires a bunch of loads, and when they are don, launches the VWF
+      require(['load']);
     </script>
   </head>
 
@@ -94,7 +94,7 @@
       </div>
       <div id="vwf-root"></div>
       <div id="irc-root" style="display:none;width:100%;position:absolute;bottom:0px;">
-        <div style="width:20%;height:100%;float:left;">
+        <div id="liveVideoLeft" style="width:20%;height:100%;float:left;">
           <iframe src="//www.youtube.com/embed/NUlU_FcMRl4" frameborder="0" allowfullscreen height="100%" width="100%" style='border:0;'></iframe>
         </div>
         <div id="irc-placeholder" style="height:100%;width:80%;float:right;"></div>
