Links to worlds

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -25,7 +25,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name = "viewport" content = "width = device-width,initial-scale = 1.0, user-scalable = no">
-    <title>Your Priorities 3D</title>
+    <title>Betri hverfi netspjall</title>
 
     <!-- The Virtual World Framework makes use of the jQuery library.                            -->
     <script type="text/javascript" src="mobile-detect.min.js"></script>
@@ -74,7 +74,7 @@
     <div>
       <div id="header-root" style="width:100%;padding-left:15px;position:absolute;top:0px;left:0px;display:none;">
         <div id="header-br-link" style="width:30%;float:left;">
-          <a href="/contact/allWorlds/0"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo.png" heigh="75"/></a>
+          <a href="/"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo.png" heigh="75"/></a>
         </div>
         <div id="header-movement" style="width:25%;float:left;">
           <img style="cursor:pointer" id="set3rdPersonMode" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_eye.png" heigh="75"/>
