--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -76,19 +76,17 @@
         <div id="header-br-link" style="width:30%;float:left;">
           <a href="/"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo.png" heigh="75"/></a>
         </div>
-        <div id="header-movement" style="width:25%;float:left;">
+        <div id="header-movement" style="width:20%;float:left;">
           <img style="cursor:pointer" id="set3rdPersonMode" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_eye.png" heigh="75"/>
-          <img id="openHelp" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_question.png" heigh="75"/>
           <img style="cursor:pointer" id="setOrbitMode" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_world.png" heigh="75"/>
         </div>
-        <div id="header-new-idea" style="width:20%;padding-bottom:20px;padding-top:20px;float:left;">
+        <div id="header-new-idea" style="width:25%;padding-bottom:20px;padding-top:20px;float:left;">
           <a target="_blank" href="https://betri-hverfi-laugardalur-2015.betrireykjavik.is/ideas/new"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
         </div>
-        <div id="header-sm" style="width:15%;padding-bottom:20px;padding-top:10px;float:left;color:#326ba8;">
-          <h1>Laugardalur 2015</h1>
+        <div id="header-sm" style="width:15%;padding-bottom:15px;padding-top:5px;float:left;color:#326ba8;">
+          <h1 id="hoodName"></h1>
         </div>
         <div id="header-sm" style="width:10%;padding-bottom:20px;padding-top:10px;float:right;color:#000;">
-          Facebook Like
           <div id="2dLink"></div>
         </div>
       </div>
