Various hacking for dynamic links for different hoods

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -81,12 +81,12 @@
           <img style="cursor:pointer" id="setOrbitMode" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_world.png" heigh="75"/>
         </div>
         <div id="header-new-idea" style="width:25%;padding-bottom:20px;padding-top:20px;float:left;">
-          <a target="_blank" href="https://betri-hverfi-laugardalur-2015.betrireykjavik.is/ideas/new"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
+          <a id="newIdeaLink" target="_blank"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
         </div>
         <div id="header-sm" style="width:15%;padding-bottom:15px;padding-top:5px;float:left;color:#326ba8;">
           <h1 id="hoodName"></h1>
         </div>
-        <div id="header-sm" style="width:10%;padding-bottom:20px;padding-top:10px;float:right;color:#000;">
+        <div id="header-sm-2" style="width:10%;padding-bottom:20px;padding-top:10px;float:right;color:#000;">
           <div id="2dLink"></div>
         </div>
       </div>
