--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -56,7 +56,16 @@
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link rel="stylesheet" type="text/css" href="vwf/view/editor/editor.css" />
     <link rel="stylesheet" type="text/css" href="vwf/view/editorview/css/jquery-ui-1.10.3.custom.css" />
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-7086040-12', 'auto');
+      ga('send', 'pageview');
+
+    </script>
     <script type="text/javascript">
       //here we go! this fires a bunch of loads, and when they are don, launches the VWF
       require(['load']);
