--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -102,7 +102,7 @@
       <div id="vwf-root"></div>
       <div id="irc-root" style="display:none;width:100%;position:absolute;bottom:0px;">
         <div id="liveVideoLeft" style="width:20%;height:100%;float:left;">
-          <iframe src="//www.youtube.com/embed/NUlU_FcMRl4" frameborder="0" allowfullscreen height="100%" width="100%" style='border:0;'></iframe>
+          <iframe src="//www.youtube.com/embed/okpOTid3lKM?autoplay=1" frameborder="0" allowfullscreen height="100%" width="100%" style='border:0;'></iframe>
         </div>
         <div id="irc-placeholder" style="height:100%;width:80%;float:right;"></div>
       </div>
